fixes #http://lab.hakim.se/ladda/

--- a/include/views/default/crunchbutton/bundle/js.phtml
+++ b/include/views/default/crunchbutton/bundle/js.phtml
@@ -26,6 +26,7 @@
 <? endforeach ; ?>
 
 <script src="/assets/js/angular-lettering.js"></script>
+<script src="/assets/js/angular-ladda.min.js"></script>
 
 <script src="/assets/js/datetime.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/js/base.js?v=<?=Deploy_Server::currentVersion()?>"></script>
