--- a/include/views/default/crunchbutton/frontend/location.phtml
+++ b/include/views/default/crunchbutton/frontend/location.phtml
@@ -18,9 +18,8 @@
 					<input type="text" class="location-address" ng-class="{ 'location-warning' : warningPlaceholder }" ng-enter="letsEat()" ng-model="location.form.address" placeholder="<?=$this->export ? 'Enter zip code or address' : 'Enter your zip code or full address'?>"<?=$this->export ? '' : ' autofocus'?>>
 				</td>
 				<td>
-				<button class="location-detect ladda-button" ng-spinner data-style="zoom-out" data-spinner-color="#FFFFFF" ng-click="locEat()">
-					<div class="location-detect-icon ladda-label"></div>
-					<div class="ladda-spinner"></div>
+				<button class="location-detect" ladda="loading" data-style="zoom-out" data-spinner-color="#FFFFFF" ng-click="locEat()">
+					<div class="location-detect-icon"></div>
 				</button>
 				</td>
 			</tr>
@@ -28,9 +27,8 @@
 	</form>
 </div>
 <div class="divider"></div>
-<button ng-show="!locationError" ng-spinner class="button-letseat-form button-bottom ladda-button button-orange" data-style="zoom-out" data-spinner-color="#FFFFFF" ng-click="letsEat()">
+<button ng-show="!locationError" ladda="loading" class="button-letseat-form button-bottom ladda-button button-orange" data-style="zoom-out" data-spinner-color="#FFFFFF" ng-click="letsEat()">
 	<div class="ladda-label">Find Restaurants!</div>
-	<span class="ladda-spinner"></span>
 </button>
 
 <div class="error-location" ng-show="locationError">
