--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -12,6 +12,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.9/angular-animate.min.js"></script>
 
 <script src="//cdn.socket.io/socket.io-1.2.0.js"></script>
+<!-- Metrics libraries -->
 <script src="/assets/cockpit/js/Chart.js"></script>
 
 <!-- Payment stuff -->
@@ -120,3 +121,4 @@
 <script src="/assets/cockpit/js/angular-cached-resource.min.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/service.feedback.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/service.metrics.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.csv.js?v=<?=Deploy_Server::currentVersion()?>"></script>
