Fix typo. Closes #4833

--- a/include/views/default/cockpit2/frontend/drivers/drivers-payment.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-payment.phtml
@@ -22,7 +22,7 @@
 						</td>
 					</tr>
 					<tr ng-if="result.id_payment_schedule">
-						<td><strong>{{result.title}} Schecule ID</strong></td>
+						<td><strong>{{result.title}} Schedule ID</strong></td>
 						<td>
 							# {{result.id_payment_schedule}}
 						</td>
