--- a/include/views/default/crunchbutton/layout/download.phtml
+++ b/include/views/default/crunchbutton/layout/download.phtml
@@ -373,7 +373,7 @@ p {
 	
 			<div class="button-pushable">
 				<a href="https://itunes.apple.com/app/id721780390" target="_blank">
-					<button class="button orange download ani-all" ng-click="letsEat()" ng-spinner data-style="zoom-out" data-spinner-color="#FFFFFF">
+					<button class="button orange download ani-all">
 						Download
 					</button>
 				</a>
