removed old ladda. spinner changes

--- a/include/views/default/seven/frontend/location.phtml
+++ b/include/views/default/seven/frontend/location.phtml
@@ -12,14 +12,14 @@
 						</td>
 						<td>				
 							<button class="location-detect" ng-click="locEat()">
-								<span class="fa fa-location-arrow" ng-spinner="loading == true" data-spinner-color="#fff" data-spinner-scale="1.5" data-spinner-css='{"margin-left": "25%"}'></span>
+								<span class="fa fa-location-arrow" ng-spinner="loadingLocation" data-spinner-color="#fff" data-spinner-scale="1.5" data-spinner-css='{"margin-left": "25%"}'></span>
 							</button>
 						</td>
 					</tr>
 				</table>
 				<div class="button-pushable find-restaurants">
 					<button class="button orange find-restaurants button-letseat-form" ng-click="letsEat()">
-						<div ng-spinner="loading" data-spinner-color="#fff" data-spinner-scale="1.6">Find Restaurants!</div>
+						<div ng-spinner="loadingGetfood" data-spinner-color="#fff" data-spinner-scale="1.6">Find Restaurants!</div>
 					</button>
 				</div>
 			</div>
