--- a/www/assets/scss/seven.scss
+++ b/www/assets/scss/seven.scss
@@ -1,25 +1,8 @@
+@import 'seven.reset';
+@import 'seven.spinner';
+
 $link: #d74924;
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
 body {
 	line-height: 1;
 	font-size: 10px;
@@ -206,7 +189,6 @@ html {
 	border-bottom-right-radius:6px;
 	border: 2px solid #003f35;
 	font-size: 15px;
-	height: 2.7em;
 
 	color: #fff;
 	margin: 0 0 15px 0;
@@ -3935,46 +3917,4 @@ font-familt: "Museo Slab";
 	height: 18.7em;
 	background-size: 100%;
 	margin: 0 auto;
-}
-
-
-
-@mixin transform($transforms) {
-	-moz-transform: $transforms;
-	-o-transform: $transforms;
-	-ms-transform: $transforms;
-	-webkit-transform: $transforms;
-	transform: $transforms;
-}
-
-@mixin scale ($deg) {
-	@include transform(scale($deg));
-}
-
-@mixin transition($transition) {
-	-moz-transition: $transition;
-	-o-transition: $transition;
-	-ms-transition: $transition;
-	-webkit-transition: $transition;
-	transition: $transition;
-}
-
-.inline-spinner {
-	opacity: 0;
-	position: absolute;
-	pointer-events: none;
-	overflow: hidden;
-	@include scale(2.5);
-}
-.inline-spinner-wrapper .inline-spinner, .inline-spinner-wrapper .inline-spinner-content {
-	@include transition(all 0.2s);
-}
-
-.inline-spinner-wrapper.loading .inline-spinner {
-	opacity: 1;
-	@include scale(1);
-}
-
-.inline-spinner-wrapper.loading .inline-spinner-content {
-	opacity: 0;
 }
