--- a/include/views/default/crunchbutton/frontend/restaurant.phtml
+++ b/include/views/default/crunchbutton/frontend/restaurant.phtml
@@ -188,8 +188,6 @@
 
 	<div class="restaurant-payment-div"></div>
 
-
-
 	<div class="restaurant-closed-desktop">
 		<div class="is-closet main-content-readable">
 			<div restaurant-is-closed></div>
@@ -286,7 +284,7 @@
 									</div>
 								</div>
 							</div>
-							<spa ng-show="giftcard.justOneGiftCardError">
+							<span ng-show="giftcard.justOneGiftCardError">
 								You can only use one gift card at a time!
 							</span>
 						</div>
