--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -2285,6 +2285,10 @@ h4.title{
 .order-contents-item-qty {
 	width: 1em;
 }
+	.order-contents-item-qty-highlight {
+		color: #df5850;
+		font-weight: bold;
+	}
 
 .dish-name{
 	text-align: left;
@@ -2294,9 +2298,13 @@ h4.title{
 		line-height: 1.5em;
 	}
 
-.dish-price{
+.dish-price, .dish-price-unity{
 	color: #666;
 	text-align: right;
+}
+.dish-price-unity{
+	white-space: nowrap;
+	font-style: italic;
 }
 
 .order-total-row{
