--- a/include/views/default/cockpit2/frontend/config/config-rewards.phtml
+++ b/include/views/default/cockpit2/frontend/config/config-rewards.phtml
@@ -11,7 +11,7 @@
 			<p><strong>Reward: Basic</strong><br><br></p>
 			<ul ng-class="{'submitted':submitted}" class="box-content2">
 				<li class="li-input" ng-class="{'error':form.rewardPointsPerCentsValue.$invalid}">
-					<div class="label">Points por cent spent:</div>
+					<div class="label">Points per cent spent:</div>
 					<div class="input">
 						<input type="number" ignore-mouse-wheel name="rewardPointsPerCentsValue" ng-model="config.reward_points_per_cents_value" required>
 					</div>
