fixed usually typos

--- a/include/views/default/crunchbutton/frontend/restaurant.closed.inline.phtml
+++ b/include/views/default/crunchbutton/frontend/restaurant.closed.inline.phtml
@@ -20,7 +20,7 @@
 		<span class="restaurant-closed-content">
 			<span ng-if="restaurant.open_for_business == '0'">
 				<span ng-if="restaurant.delivery">Delivery is usually available during the following hours</span>
-				<span ng-if="!restaurant.delivery">Pickup is usualy available during the following hours</span>
+				<span ng-if="!restaurant.delivery">Pickup is usually available during the following hours</span>
 			</span>
 			<span ng-if="restaurant.open_for_business != '0'">
 				<span ng-if="restaurant.delivery">Delivery is available during the following hours</span>
