fixed issue with opening crunchbutotn in app

--- a/include/views/default/seven/frontend/help.phtml
+++ b/include/views/default/seven/frontend/help.phtml
@@ -42,7 +42,7 @@
 	</div>
 	<div class="two-col">
 		<h4>How do I order food?</h4>
-		<p>Easy! Just go to <a href="http://crunchbutton.com" target="_blank">crunchbutton.com</a> and click the restaurant you want to order from. Add whatever food you want, and enter your address, phone, and payment info. Click "Get Food" and try to stay hungry! The driver will call you when they're outside.</p>
+		<p>Easy! Just go to <a href="http://crunchbutton.com" target="_system">crunchbutton.com</a> and click the restaurant you want to order from. Add whatever food you want, and enter your address, phone, and payment info. Click "Get Food" and try to stay hungry! The driver will call you when they're outside.</p>
 	</div>
 	<div class="two-col">
 		<h4>How do you save my info?</h4>
