--- a/include/views/default/seven/frontend/restaurant.closed.inline.phtml
+++ b/include/views/default/seven/frontend/restaurant.closed.inline.phtml
@@ -6,7 +6,9 @@
 		<span class="restaurant-box-content">
 			<div class="restaurant-box-title">Available {{restaurant._opensIn_formatted}}</div>
 			<div class="restaurant-box-text">
-				Hours of operation (<span ng-bind="restaurant._tzabbr"></span>):<br>
+				<span ng-if="!restaurant.delivery_service">Hours of operation</span>
+				<span ng-if="restaurant.delivery_service">Hours we deliver</span>
+				&nbsp;(<span ng-bind="restaurant._tzabbr"></span>):<br>
 				<span ng-bind-html-unsafe="restaurant.closedMessage() | nl2br"></span>
 			</div>
 		</span>
