--- a/www/assets/scss/seven.scss
+++ b/www/assets/scss/seven.scss
@@ -1794,7 +1794,6 @@ p {
 	.restaurant-side-bar a {
 		color: #f88f68;
 	}
-	
 	.cart-items {
 		background: #373737;
 	}
@@ -1808,9 +1807,11 @@ p {
 		-webkit-filter: brightness(0.999);
 		background: #fffef8;
 		padding: 0 0 1.5em 1.5em !important;
+		box-sizing: border-box;
 	}
 	.restaurant-name {
 		margin-top: -30em;
+		padding: 3.2em 0 0 0;
 	}
 	.restaurant-name h1, .restaurant-name h2 {
 		color: #000000;
@@ -1824,18 +1825,10 @@ p {
 		white-space: pre-line;
 	}
 	.restaurant-name h1 {
-		font-size: 4.6em;
+		font-size: 4.2em;
 	}
 	.restaurant-name h2 {
-		font-size: 3em;
-	}
-	.restaurant-pic {
-		height: 50em;
-		-webkit-filter: brightness(0.90) contrast(125%);
-		
-	}
-	.restaurant-pic-overlay {
-		display: none;
+		font-size: 2.7em;
 	}
 	.restaurant-menu-category:first-child .restaurant-category {
 		padding-top: 0;
@@ -1860,8 +1853,6 @@ p {
 	.dish-item-price {
 		color: #d9462f;
 	}
-	
-	
 }
 /* wierd stuff i was playing with
 @media only screen and (-webkit-min-device-pixel-ratio:1.5), only screen and (min-device-pixel-ratio:1.5) {
@@ -3923,6 +3914,14 @@ font-familt: "Museo Slab";
 		display: inline-block;
 		margin: 1em 1.2em 0 1.2em;
 		font-size: 1.2em;
+	}
+	.restaurant-pic {
+		height: 35em;
+		-webkit-filter: brightness(0.90) contrast(125%);
+		
+	}
+	.restaurant-pic-overlay {
+		display: none;
 	}
 }
 @media screen and (max-width: 1024px) {
