--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -160,6 +160,15 @@
 					</table>
 				</a>
 
+				<a href="/drivers/drivers-locations" class="menu-link" ng-class="{'nav-active': (navigation.page == 'drivers-locations')}">
+					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
+						<tr>
+							<td class="side-menu-icon"><i class="fa fa-location-arrow"></i></td>
+							<td class="side-menu-label">Track Locations</a></td>
+				</tr>
+				</table>
+				</a>
+
 				<a href="/drivers/docs/pexcard" class="menu-link" ng-if="account.isDriver && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'drivers-pex-card')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
