--- a/include/views/default/seven/frontend/order.phtml
+++ b/include/views/default/seven/frontend/order.phtml
@@ -161,7 +161,7 @@
 			<div class="divider spacer-one-two"></div>
 
 			<span ng-if="order.delivery_type == 'delivery'">
-				<a href="{{order.mapLink}}" target="_system"><div class="order-map" style="background: url('https://maps.googleapis.com/maps/api/staticmap?&size={{width*2}}x300&markers=color:green%7Clabel:A%7C{{order.address.replace('#','') | nl2cm}}&markers=color:red%7Clabel:B%7C{{order._restaurant_lat}},{{order._restaurant_lon}}&sensor=false&visual_refresh=true');"></div></a>
+				<a href="{{order.mapLink}}" target="_system"><div class="order-map" style="background: url('https://maps.googleapis.com/maps/api/staticmap?&size={{width*2}}x300&markers=color:green%7Clabel:A%7C{{order.address.replace('#','') | nl2cm}}&markers=color:red%7Clabel:B%7C{{order._restaurant_lat}},{{order._restaurant_lon}}&sensor=false&visual_refresh=true&style=feature:road.arterial|element:geometry.fill|visibility:on|weight:1.5|lightness:-15|gamma:0.95|hue:0xff0000|saturation:-87|color:0xf67f52&style=feature:road.highway|element:geometry.fill|hue:0xff4d00|lightness:39|color:0xf67f52&style=feature:landscape|color:0xfffef8&style=feature:water|hue:0x00f6ff|color:0x119c87&style=element:labels.icon|hue:0x00ddff|saturation:-42&style=feature:poi|element:geometry.fill|color:0xfffef8&style=feature:road.local|color:0x119c87|visibility:simplified');"></div></a>
 			</span>
 
 			<span ng-if="order.delivery_type == 'takeout'">
