fixes #4896. also fixes some download page issues

--- a/include/views/default/seven/frontend/download.phtml
+++ b/include/views/default/seven/frontend/download.phtml
@@ -7,7 +7,7 @@
 			<h2>there's an app for that.</h2>
 	
 			<div class="button-pushable">
-				<a href="https://itunes.apple.com/app/id721780390" target="_blank">
+				<a href="{{downloadLink}}" target="_blank">
 					<button class="button orange download ani-all">
 						Download
 					</button>
@@ -20,13 +20,13 @@
 		<div class="divider"></div>
 		
 		<div class="download-bottom fixed-699">
-			<a href="https://itunes.apple.com/app/id721780390" target="_blank"><div class="download-phone image-animated"></div></a>
+			<a href="{{downloadLink}}" target="_blank"><div class="download-phone image-animated"></div></a>
 		</div>
 	</div>
 	
 	<div class="download-desktop">
 		<div class="content">
-			<a href="https://itunes.apple.com/app/id721780390" target="_blank"><div class="download-phone image-animated"></div></a>
+			<a href="{{downloadLink}}" target="_blank"><div class="download-phone image-animated"></div></a>
 
 			<div class="download-top">
 				<!-- dont hate. -->
@@ -61,6 +61,7 @@
 					<tr><td class="download-top-grid-foot">
 			
 						<a href="https://itunes.apple.com/app/id721780390" target="_blank"><div class="app-store"></div></a>
+						<a href="https://play.google.com/store/apps/details?id=com.crunchbutton" target="_blank"><div class="play-store"></div></a>
 						
 						<br>
 						
